MCR-2969 make MyCoRe compatible to Java 21